--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
     <script src="js/events.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <form>
-        <label for="ko">Skriv ko:</label><br>
-        <input type="text" id="ko" name="ko"><br>
+      <label for="ko">Write cow:</label><br />
+      <input type="text" id="cow" name="cow" /><br />
 
-        <label for="gris">skriv gris</label><br>
-        <input type="text" id="gris" value="bob" name="gris">
-        <button type="button" id="evaluatePig">valider</button><br>
+      <label for="gris">write pig</label><br />
+      <input type="text" id="pig" value="bob" name="pig" />
+      <button type="button" id="evaluatePig">valider</button><br />
 
-        <label for="elg">Skriv elg:</label><br>
-        <input type="text" id="elg" name="elg"><br>
+      <label for="elg">Write elk:</label><br />
+      <input type="text" id="elk" name="elk" /><br />
 
-        <button type="button" id="evaluateForm">valider form</button>
+      <button type="button" id="evaluateForm">valider form</button>
     </form>
-</body>
-
+  </body>
 </html>
