Link To Stylesheet

--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/main.css" />
     <script src="js/events.js" defer></script>
   </head>
 
   <body>
-    <form>
-      <label for="ko">Write cow:</label><br />
-      <input type="text" id="cow" name="cow" /><br />
+      <form>
+        <label for="ko">Write cow:</label><br />
+        <input type="text" id="cow" name="cow" /><br />
 
-      <label for="gris">write pig</label><br />
-      <input type="text" id="pig" value="bob" name="pig" />
-      <button type="button" id="evaluatePig">valider</button><br />
+        <label for="gris">write pig</label><br />
+        <input type="text" id="pig" value="bob" name="pig" />
+        <button type="button" id="evaluatePig">valider</button><br />
 
-      <label for="elg">Write elk:</label><br />
-      <input type="text" id="elk" name="elk" /><br />
+        <label for="elg">Write elk:</label><br />
+        <input type="text" id="elk" name="elk" /><br />
 
-      <button type="button" id="evaluateForm">valider form</button>
-    </form>
+        <button type="button" id="evaluateForm">valider form</button>
   </body>
 </html>
