Switch and cases

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <label for="elg">Write elk:</label><br />
         <input type="text" id="elk" name="elk" /><br />
-        <select name="AnimalSelector" id="selector">
+        <select name="selector" id="selector">
           <option value="Bird">Bird</option>
           <option value="Fish">Fish</option>
           <option value="Reptile">Reptile</option>
@@ -32,6 +32,10 @@
         </select>
         <button type="button" id="evaluateForm">valider form</button>
       </form>
+    </div>
+    <div class="textdiv">
+      <h1 id="h1"></h1>
+      <p id="text"></p>
     </div>
   </body>
 </html>
